--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -9,7 +9,7 @@
 }
 
 table, td, th {
-  border: 3px solid grey;
+  border: 1px ridge grey;
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
