--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,11 +8,11 @@
 	display:inline;
 }
 
-table, td, th {
-  border: thin dotted black;
+table {
+  table-layout: fixed;
+  width: 180px;
+  border: 1px dotted black;
 }
-
-tr:nth-child(even) {background-color: #f2f2f2;}
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
