--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,8 @@ table {
   border: 1px dotted black;
 }
 
+tr:nth-child(even) {background-color: #f2f2f2;}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax",
