--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,7 +14,10 @@ table {
   border: 1px dotted black;
 }
 
-tr:nth-child(even) {background-color: #f2f2f2;}
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+  width: 180px;
+}
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
