--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,6 +17,10 @@ tr:nth-child(even) {
   width: 180px;
 }
 
+pre {
+  width: 100%;
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
 	"syntax",
