--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,11 +14,7 @@ table {
 
 tr:nth-child(even) {
   background-color: #f2f2f2;
-  width: 180px;
-}
-
-code {
-  width: 100%;
+  width: auto;
 }
 
 // Import partials from `sass_dir` (defaults to `_sass`)
