--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,7 +8,7 @@
 	display:inline;
 }
 
-.tablelines table, .tablelines td, .tablelines th {
+table, td, th {
     border: 1px dotted black; padding:20px;
 }
 
